--- a/AppRPG/AppRPG/AppRPG.csproj
+++ b/AppRPG/AppRPG/AppRPG.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="Avalonia.Diagnostics" Version="11.3.9">
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
+            
         </PackageReference>
+        <AvaloniaResource Include="TheAssets/**"/>
     </ItemGroup>
 </Project>
